logo and images added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
+							<div class=""><span class="icon ">
+							<a href="#" class="image logoAone"><img src="images/A-oneLogoNew.jpg" alt="" /></a></span></div>
 							<h2>A-one Progressive Products Mfg.</h2>
 							<p>We care for you</p>
 						</div>
@@ -50,7 +51,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/images.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Tissue Paper Napkin</h2>
 										<p>30cm X 30cm Napkins for home and hotel use. Super soft and hygiene made from 100% pure virgin fibre</p>
@@ -62,7 +63,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/images1.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Tissue Paper Napkin</h2>
 										<p>20cm X 18cm Napkins for party and restaurant use. Super soft and hygiene made from 100% pure virgin fibre</p>
@@ -74,7 +75,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/tissuepaper.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Tissue Paper Napkin</h2>
 										<p>27cm X 30cm Napkins for Kitchen and party use. Super soft and hygiene made from 100% pure virgin fibre</p>
@@ -90,25 +91,25 @@
 									<p>We at A-one progressive products thrive to give a-one products to our customers and take all care of hygiene and safety measures.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/tissuepaper.jpg" alt="" /></a>
 											<h3 class="major">30cm X 30cm</h3>
 											<p>Used for Home cleaning and hotel.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/tissuepaper.jpg" alt="" /></a>
 											<h3 class="major">27cm X 27cm</h3>
 											<p>Used for Restaurants and coffee shops .</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/tissuepaper.jpg" alt="" /></a>
 											<h3 class="major">20cm X 20cm</h3>
 											<p>Used for small stalls and shops.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/tissuepaper.jpg" alt="" /></a>
 											<h3 class="major">20cm X 18cm</h3>
 											<p>Used for small stalls and shops.</p>
 											<a href="#" class="special">Learn more</a>
