--- a/index.html
+++ b/index.html
@@ -159,6 +159,10 @@
 								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/yogesh__j</a></li>
 								<li class="icon brands fa-instagram"><a href="#">instagram.com/yogesh__j</a></li>
 							</ul>
+							<div class="qrCode">
+								<div><h2 style="margin: 0px;">Scan to call</h2></div>
+								<a href="#" class="image"><img src="images/QRCode.jpg" alt="" /></a>
+							</div>
 							<ul class="copyright">
 								<li>&copy; A-one Progressive Products Mfg. All rights reserved.</li>
 							</ul>
